// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots using mount 1`] = `
.emotion-0 {
  margin: 1em;
  color: black;
}

<Counter>
  <div>
    <button
      data-testid="decrement"
      disabled={false}
      onClick={[Function]}
    >
      -
    </button>
    <Component
      clicks={0}
    >
      <Styled(span)
        clicks={0}
        data-testid="count"
      >
        <span
          className="emotion-0"
          data-testid="count"
        >
          0
        </span>
      </Styled(span)>
    </Component>
    <button
      data-testid="increment"
      disabled={false}
      onClick={[Function]}
    >
      +
    </button>
  </div>
</Counter>
`;

exports[`snapshots using shallow 1`] = `
<div>
  <button
    data-testid="decrement"
    disabled={false}
    onClick={[Function]}
  >
    -
  </button>
  <Component
    clicks={0}
  />
  <button
    data-testid="increment"
    disabled={false}
    onClick={[Function]}
  >
    +
  </button>
</div>
`;
